Replaced outdated Base64Encoder class